...
    func showNextQuestionOrResults() {
        viewController?.hideLoadingIndicator()
        if self.isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: self.questionsAmount)
            let text = makeResultsMessage()
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд закончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            self.showAlert(quizResult: viewModel)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
            viewController?.toggleYesNoButtons(toEnable: true)
        }
...
